fix: DTO fixed for APIs